2008-10-24  Sam Steingold  <sds@gnu.org>

	Support Berkeley-DB 2.7
	* modules/berkeley-db/configure.in: check for
	DB_ENV.log_set_config and DB_ENV.get_intermediate_dir_mode
	* modules/berkeley-db/bdb.c (DBE-SET-OPTIONS, DBE-GET-OPTIONS)
	[HAVE_DB_ENV_GET_INTERMEDIATE_DIR_MODE]: accept :INTERMEDIATE-DIR-MODE
	(dbe_get_intermediate_dir_mode): add DEFINE_DBE_GETTER1

2008-10-24  Sam Steingold  <sds@gnu.org>

	ensure that all module configures have aux build dir set up
	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): call AC_CONFIG_AUX_DIR here
	* modules/berkeley-db/configure.in, modules/gdbm/configure.in,
	* modules/pari/configure.in, modules/pcre/configure.in,
	* modules/postgresql/configure.in, modules/regexp/configure.in,
	* modules/zlib/configure.in: do not call AC_CONFIG_AUX_DIR,
	pass argument to CL_MODULE_COMMON_CHECKS instead
	* modules/clx/new-clx/configure.in, modules/dirkey/configure.in,
	* modules/fastcgi/configure.in, modules/gtk2/configure.in,
	* modules/i18n/configure.in, modules/oracle/configure.in,
	* modules/dbus/configure.in, modules/rawsock/configure.in,
	* modules/readline/configure.in, modules/syscalls/configure.in,
	* modules/wildcard/configure.in:
	pass argument to CL_MODULE_COMMON_CHECKS

2008-10-24  Sam Steingold  <sds@gnu.org>

	* build-aux/config.rpath, gllib/Makefile.am, gllib/stdint.in.h,
	* gllib/stdlib.in.h, gllib/unistd.in.h, gllib/wchar.in.h,
	* gllib/wctype.in.h, gllib/uniwidth/width.c, glm4/gnulib-cache.m4,
	* glm4/gnulib-common.m4, glm4/gnulib-comp.m4, glm4/include_next.m4,
	* glm4/lib-link.m4, glm4/lib-prefix.m4, glm4/lock.m4,
	* glm4/stdlib_h.m4, glm4/unistd_h.m4, glm4/wchar.m4: sync with gnulib
	* glm4/threadlib.m4: add (pulled in by gettext 0.17)

2008-10-24  Sam Steingold  <sds@gnu.org>

	replace m4/make.m4 with glm4/gnu-make.m4
	* Makefile.devel (gnulib-imported): add gnu-make
	* m4/make.m4: remove
	* glm4/gnu-make.m4: add
	* configure.in: use gl_GNU_MAKE instead of CL_PROG_MAKE

2008-10-24  Sam Steingold  <sds@gnu.org>
